--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,16 @@
-<h2>Sign up</h2>
+<div  class="row d-flex justify-content-center">
+  <div class="col-md-6">
+    <h2 class= "m-3">Sign up</h2>
+  </div>
+</div>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
   <%= f.error_notification %>
-
-  <div class="form-inputs">
+<div class="row d-flex justify-content-center">
+  <div class="form-inputs col-md-6">
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :address %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -17,9 +24,16 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="row d-flex justify-content-center">
+    <div class="form-actions col-md-6">
+      <%= f.button :submit, "Sign up" %>
+    </div>
   </div>
+</div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div  class="row d-flex justify-content-center">
+  <div class="col-md-6">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
