--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,60 @@
-<div class="row d-flex justify-content-center">
-  <div class="col-md-6">
-    <ul class = "list-unstyled">
-      <li>
-        Name: <%= @user.first_name %>
-        <%= @user.last_name %>
-      </li>
-      <li>
-        Address: <%= @user.address %>
-      </li>
-      <li>
-        email: <%= @user.email %>
-      </li>
-    </ul>
-  </div>
-</div>
+<div class="container">
+    <div class="main-body">
+          <div class="row gutters-sm">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex flex-column align-items-center text-center">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <div class="mt-3">
+                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
+                      <p class="text-secondary mb-1">Hagamos composta</p>
+                      <p class="text-muted font-size-sm">Hagamos poposta</p>
+                      <%# <button class="btn btn-primary">Follow</button>
+                      <button class="btn btn-outline-primary">Message</button> %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Full Name</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Email</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                       <%= @user.email %>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Address</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                       <%= @user.address %>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
