--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,49 @@
 <div class="container" class="text-center">
   <strong><h3>Hagamos Composta Homepage </h3></strong>
 </div>
+<div class="container text-center">
+  <h3>Lo Que Hacemos</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Hagamos Composta </p>
+    </div>
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Hagamos Poposta </p>
+    </div>
+    <div class="col-sm-4">
+      <div class="well">
+       <p>Hagamos Composta</p>
+        <ol>
+          <li>Realiza tu inscripción</li>
+          <li>Te entregamos tu kit</li>
+           <ul>
+              <li>1 bote pequeños 6lts para cocina</li>
+              <li>1 bote grande 19lts con tapa</li>
+            </ul>
+          <li>Separa tus desechos organicos nostotros pasamos por ellos para hacerlos composta </li>
+          <li>Despues de 15 cubetas recolectadas, te entregamos una composta lista para usarse en huertos, macetas y jardines</li>
+        </ol>
+      </div>
+      <div class="well">
+       <p>Hagamos Poposta</p>
+        <ol>
+          <li>Realiza tu inscripción</li>
+          <li>Te entregamos tu kit</li>
+            <ul>
+              <li>2 cubetas 19lts con tapa</li>
+              <li>1 vacia y 1 con aserrín</li>
+            </ul>
+          <li>Separa las heces de tus mascotas y nostotros pasamos por ellas</li>
+          <li>Nos llevamos las heces a un terreno y lo hacemos composta</li>
+          <li>La composta obtenida se utilizará en reforestaciones urbanas, jardines y espacios recreativos</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div><br>
+
+<footer class="container-fluid text-center">
+  <p>Footer Text</p>
+</footer>
