--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,9 @@
                     <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                     <div class="mt-3">
                       <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                      <p class="text-secondary mb-1">Hagamos composta</p>
-                      <p class="text-muted font-size-sm">Hagamos poposta</p>
+                      <p class="text-secondary mb-1"> Email <%= @user.email %></p>
+                      <p class="text-muted font-size-sm">Address <%= @user.address %></p>
+                      <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
                       <%# <button class="btn btn-primary">Follow</button>
                       <button class="btn btn-outline-primary">Message</button> %>
                     </div>
