--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
             <div class="col-md-8">
               <div class="card mb-3">
                 <div class="card-body">
-                  <div class="row">
+                  <div class="row my-6">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Full Name</h6>
                     </div>
@@ -30,7 +30,7 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
+                  <div class="row my-6">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Email</h6>
                     </div>
@@ -39,7 +39,7 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
+                  <div class="row my-6">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Address</h6>
                     </div>
@@ -48,7 +48,7 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
+                  <div class="row my-6">
                     <div class="col-sm-12">
                       <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
                     </div>
@@ -59,3 +59,7 @@
           </div>
         </div>
     </div>
+
+<% @bookings.each do |booking| %>
+  <%= booking.id %>
+<% end %>
