--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,15 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+#logo{
+  border-radius: 50% 20% / 10% 40%
+}
+
+#bg-primary{
+  background-color: #427849
+}
+
+#navbar{
+  background-color: #F3E5CB;
+}
