--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,50 +1,113 @@
-<div class="container" class="text-center">
-  <strong><h3>Hagamos Composta Homepage </h3></strong>
-
-</div>
-<div class="container text-center">
-  <h3>Lo Que Hacemos</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Hagamos Composta </p>
-    </div>
-    <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Hagamos Poposta </p>
-    </div>
-    <div class="col-sm-4">
-      <div class="well">
-       <p>Hagamos Composta</p>
-        <ol>
-          <li>Realiza tu inscripción</li>
-          <li>Te entregamos tu kit</li>
-           <ul>
-              <li>1 bote pequeños 6lts para cocina</li>
-              <li>1 bote grande 19lts con tapa</li>
-            </ul>
-          <li>Separa tus desechos organicos nostotros pasamos por ellos para hacerlos composta </li>
-          <li>Despues de 15 cubetas recolectadas, te entregamos una composta lista para usarse en huertos, macetas y jardines</li>
-        </ol>
+<div id="bg-primary">
+  <div class="container" class="text-center">
+    <div class="container-fluid no-padding">
+      <div class="row d-flex justify-content-center mb-5">
+        <div class="col-md-6 text-center">
+          <img src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661359435/hagamos_composta_prugxc.jpg" alt="homepage" class="img-responsive mt-5" id="logo" />
+        </div>
       </div>
-      <div class="well">
-       <p>Hagamos Poposta</p>
-        <ol>
-          <li>Realiza tu inscripción</li>
-          <li>Te entregamos tu kit</li>
-            <ul>
-              <li>2 cubetas 19lts con tapa</li>
-              <li>1 vacia y 1 con aserrín</li>
-            </ul>
-          <li>Separa las heces de tus mascotas y nostotros pasamos por ellas</li>
-          <li>Nos llevamos las heces a un terreno y lo hacemos composta</li>
-          <li>La composta obtenida se utilizará en reforestaciones urbanas, jardines y espacios recreativos</li>
-        </ol>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="rounded mx-auto d-block w-50 h-50" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661369410/IMG_2621_zw2hie.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="rounded mx-auto d-block w-50 h-50" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661369418/IMG_2620_m1sulf.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="rounded mx-auto d-block w-50 h-50" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661369425/IMG_2619_yjtczl.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <div class ="row">
+    <div class="col-sm-12 text-center">
+      <button class="btn btn-success mt-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+        Hagamos Composta
+      </button>
+
+      <div style="min-height: 120px;">
+        <div class="collapse collapse-horizontal" id="collapseWidthExample">
+          <div class="card card-body" style="width: 300px;">
+            <ol>
+              <li>Realiza tu inscripción</li>
+                <li>Te entregamos tu kit</li>
+                <ul>
+                    <li>1 bote pequeños 6lts para cocina</li>
+                    <li>1 bote grande 19lts con tapa</li>
+                  </ul>
+                <li>Separa tus desechos organicos nostotros pasamos por ellos para hacerlos composta </li>
+              <li>Despues de 15 cubetas recolectadas, te entregamos una composta lista para usarse en huertos, macetas y jardines</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+
+      <p>
+        <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+          Hagamos Poposta
+        </button>
+      </p>
+      <div style="min-height: 120px;">
+        <div class="collapse collapse-horizontal" id="collapseWidthExample">
+          <div class="card card-body" style="width: 300px;">
+            <ol>
+              <li>Realiza tu inscripción</li>
+              <li>Te entregamos tu kit</li>
+                <ul>
+                  <li>2 cubetas 19lts con tapa</li>
+                  <li>1 vacia y 1 con aserrín</li>
+                </ul>
+              <li>Separa las heces de tus mascotas y nostotros pasamos por ellas</li>
+              <li>Nos llevamos las heces a un terreno y lo hacemos composta</li>
+              <li>La composta obtenida se utilizará en reforestaciones urbanas, jardines y espacios recreativos</li>
+            </ol>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div><br>
+</div>
 
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
+<footer class="bg-dark text-center text-white">
+  <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/hagamoscompostajuntos" target="_blank" role="button">
+      <i class="fab fa-facebook-f"></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/hagamoscomposta?s=21&t=aO-01Xygp_SqY_v4DQDSIA" target="_blank" role="button"><i class="fab fa-twitter"></i></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/hagamos_composta?igshid=YmMyMTA2M2Y=" target="_blank" role="button"><i class="fab fa-instagram"></i></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/company/hagamos-composta-ac/" target="_blank" role="button"><i class="fab fa-linkedin-in"></i></a>
+     </section>
+        <!-- Section: Social media -->
+  </div>
+      <!-- Grid container -->
+      <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2017 Copyright
+  </div>
+      <!-- Copyright -->
 </footer>
