some changes made to homepage, only pushing to have updated code right now lol

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <div id="bg-primary">
   <div class="container" class="text-center">
-    <div class="container-fluid no-padding">
+    <div class="container-fluid no-padding" id="logo">
       <div class="row d-flex justify-content-center mb-5">
-        <div class="col-md-6 text-center">
-          <img src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661359435/hagamos_composta_prugxc.jpg" alt="homepage" class="img-responsive mt-5" id="logo" />
+        <div class="col-md-12 text-center">
+          <img src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661442535/Screen_Shot_2022-08-25_at_10.35.06_lg7w6r.png" alt="homepage" class="img-responsive" />
         </div>
       </div>
     </div>
