--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,8 @@
                     <div class="mt-3">
                       <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
                       <p class="text-secondary mb-1"> Email <%= @user.email %></p>
-                      <p class="text-muted font-size-sm">Address <%= @user.address %></p>
+                       <p class="text-muted font-size-sm">Phone Number <%= @user.phone %></p>
+                      <p class="text-muted font-size-sm">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
                       <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
                       <%# <button class="btn btn-primary">Follow</button>
                       <button class="btn btn-outline-primary">Message</button> %>
@@ -61,5 +62,5 @@
     </div>
 
 <% @bookings.each do |booking| %>
-  <%= booking.id %>
+  <%= booking.subscription.name %>
 <% end %>
