--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,65 +1,35 @@
-<div class="container">
+<div id="bg-primary2">
+  <div class="container">
     <div class="main-body">
-          <div class="row gutters-sm">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex flex-column align-items-center text-center">
-                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                    <div class="mt-3">
-                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                      <p class="text-secondary mb-1"> Email <%= @user.email %></p>
-                      <p class="text-muted font-size-sm">Address <%= @user.address %></p>
-                      <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
-                      <%# <button class="btn btn-primary">Follow</button>
-                      <button class="btn btn-outline-primary">Message</button> %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Full Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Email</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                       <%= @user.email %>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Address</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                       <%= @user.address %>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-12">
-                      <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
-                    </div>
-                  </div>
+      <div class="row gutters-sm">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="d-flex flex-column align-items-center text-center">
+                <%#<%= avatar_for(@user) %>
+                <% if @user.photo.attached? %>
+                  <%= cl_image_tag @user.photo.key, class: "rounded-circle", width: "150px" %>
+                <% else %>
+                  <%= cl_image_tag("https://res.cloudinary.com/dqfnzfthu/image/upload/v1661456814/default%20avatar.png", class: "rounded-circle", width: "150px")%>
+                <% end %>
+                <div class="mt-3">
+                  <p>Add profile photo</p>
+                    <%# <form action="/action_page.php">
+                      <input type="file" id="myFile" name="filename">
+                      <input class="btn btn-info" type="submit">
+                    </form> %>
+                  <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
+                  <p class="text-secondary mb-1"> Email <%= @user.email %></p>
+                  <p class="text-muted font-size-sm">Address <%= @user.address %></p>
+                  <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
+                  <%# <button class="btn btn-primary">Follow</button>
+                  <button class="btn btn-outline-primary">Message</button> %>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
-
-<% @bookings.each do |booking| %>
-  <%= booking.id %>
-<% end %>
+  </div>
+</div>
