added cards to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container" class="text-center">
     <div class="container-fluid no-padding" id="logo">
       <div class="row d-flex justify-content-center mb-5">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12">
           <img src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661442535/Screen_Shot_2022-08-25_at_10.35.06_lg7w6r.png" alt="homepage" class="img-responsive" />
         </div>
       </div>
@@ -35,54 +35,73 @@
     </div>
   </div>
 
-  <div class ="row">
-    <div class="col-sm-12 text-center">
-      <button class="btn btn-success mt-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-        Hagamos Composta
-      </button>
+  <div class="projcard-container">
 
-      <div style="min-height: 120px;">
-        <div class="collapse collapse-horizontal" id="collapseWidthExample">
-          <div class="card card-body" style="width: 300px;">
-            <ol>
-              <li>Realiza tu inscripción</li>
-                <li>Te entregamos tu kit</li>
-                <ul>
-                    <li>1 bote pequeños 6lts para cocina</li>
-                    <li>1 bote grande 19lts con tapa</li>
-                  </ul>
-                <li>Separa tus desechos organicos nostotros pasamos por ellos para hacerlos composta </li>
-              <li>Despues de 15 cubetas recolectadas, te entregamos una composta lista para usarse en huertos, macetas y jardines</li>
-            </ol>
-          </div>
+	<div class="projcard projcard-blue">
+		<div class="projcard-innerbox">
+			<img class="projcard-img" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661457135/Screen_Shot_2022-08-25_at_2.52.07_PM_wvtyvg.png" />
+			<div class="projcard-textbox">
+				<div class="projcard-title">Hagamos Composta</div>
+				<div class="projcard-subtitle">El proceso es muy facíl:</div>
+				<div class="projcard-bar"></div>
+				<div class="projcard-description">
+          <ol> 1. Contactanos via WhatsApp, Facebook o Instagram</ol>
+          <ol> 2. Confirma tu ruta de recoleccion</ol>
+          <ol> 3. Realizas tu inscripion</ol>
+          <ol> 4. Te entregamos tu kit</ol>
+          <ol> 5. Separas tus desechos de forma semanal o quincenal</ol>
+          <ol> 6. Recolectamos el bote con tus desechos y te dejamos otro limpio</ol>
+          <ol> 7. Generamos composta</ol>
         </div>
-      </div>
+			</div>
+		</div>
+	</div>
 
-
-      <p>
-        <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-          Hagamos Poposta
-        </button>
-      </p>
-      <div style="min-height: 120px;">
-        <div class="collapse collapse-horizontal" id="collapseWidthExample">
-          <div class="card card-body" style="width: 300px;">
-            <ol>
-              <li>Realiza tu inscripción</li>
-              <li>Te entregamos tu kit</li>
-                <ul>
-                  <li>2 cubetas 19lts con tapa</li>
-                  <li>1 vacia y 1 con aserrín</li>
-                </ul>
-              <li>Separa las heces de tus mascotas y nostotros pasamos por ellas</li>
-              <li>Nos llevamos las heces a un terreno y lo hacemos composta</li>
-              <li>La composta obtenida se utilizará en reforestaciones urbanas, jardines y espacios recreativos</li>
-            </ol>
-          </div>
+	<div class="projcard projcard-red">
+		<div class="projcard-innerbox">
+			<img class="projcard-img" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661457380/Screen_Shot_2022-08-25_at_2.56.15_PM_wiehby.png" />
+			<div class="projcard-textbox">
+				<div class="projcard-title">Hagamos Poposta</div>
+				<div class="projcard-subtitle">¡Únete, El proceso es muy sencillo!</div>
+				<div class="projcard-bar"></div>
+				<div class="projcard-description">
+          <ol> 1. Realizas tu inscripion</ol>
+          <ol> 2. Te entregamos tu kit</ol>
+          <ol> 3. Separas las heces de tu mascotas semanal o quincenalmente y nosotros las recolectamos</ol>
+          <ol> 4. Nos llevamos las heces a un terreno para hacer composta</ol>
+          <ol> 5. La composta obtenida sera utilizada en espacios recreativos</ol>
         </div>
-      </div>
-    </div>
-  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="projcard projcard-green">
+		<div class="projcard-innerbox">
+			<img class="projcard-img" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661459342/Screen_Shot_2022-08-25_at_3.28.57_PM_n4cinn.png" />
+			<div class="projcard-textbox">
+				<div class="projcard-title">Conservacion y Reintroduccion del Lobo Mexicano</div>
+				<div class="projcard-subtitle">¡Gracias a Hagamos Poposta!</div>
+				<div class="projcard-bar"></div>
+				<div class="projcard-description">
+          Un porcentaje de cada recoleccion se destinara para apoyar el proyecto del Lobo Mexicano.
+          Hace unas décadas solo quedaban 10 individuos y ahora con tu recolección de Hagamos Poposta ayudaras a que se sigan sumando esfuerzos para su conservación!!🐺
+        </div>
+			</div>
+		<</div>
+	</div>
+
+	<div class="projcard projcard-customcolor" style="--projcard-color: #F5AF41;">
+		<div class="projcard-innerbox">
+			<img class="projcard-img" src="https://picsum.photos/800/600?image=943" />
+			<div class="projcard-textbox">
+				<div class="projcard-title">Last Card</div>
+				<div class="projcard-subtitle">That's the last one. Have a nice day!</div>
+				<div class="projcard-bar"></div>
+				<div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 
 <footer class="bg-dark text-center text-white">
