--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
   background-color: #427849
 }
 
+#logo{
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
 #navbar{
   background-color: #F3E5CB;
 }
