more changes to the homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,11 +47,14 @@
 				<div class="projcard-description">
           <ol> 1. Contactanos via WhatsApp, Facebook o Instagram</ol>
           <ol> 2. Confirma tu ruta de recoleccion</ol>
-          <ol> 3. Realizas tu inscripion</ol>
+          <ol> 3. Realizas tu inscripcion</ol>
           <ol> 4. Te entregamos tu kit</ol>
           <ol> 5. Separas tus desechos de forma semanal o quincenal</ol>
           <ol> 6. Recolectamos el bote con tus desechos y te dejamos otro limpio</ol>
           <ol> 7. Generamos composta</ol>
+        </div>
+        <div>
+          <a class="btn btn-outline-success" href="#" role="button">Inscripcion</a>
         </div>
 			</div>
 		</div>
@@ -92,12 +95,17 @@
 
 	<div class="projcard projcard-customcolor" style="--projcard-color: #F5AF41;">
 		<div class="projcard-innerbox">
-			<img class="projcard-img" src="https://picsum.photos/800/600?image=943" />
+			<img class="projcard-img" src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661461359/Screen_Shot_2022-08-25_at_4.02.32_PM_xgphrr.png" />
 			<div class="projcard-textbox">
-				<div class="projcard-title">Last Card</div>
-				<div class="projcard-subtitle">That's the last one. Have a nice day!</div>
+				<div class="projcard-title">El Proyecto Xona ya empezó!!</div>
+				<div class="projcard-subtitle">Muchas gracias a todas las personas que estan confiando en nosotros</div>
 				<div class="projcard-bar"></div>
-				<div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+				<div class="projcard-description">
+          Uno de los terrenos de Hagamos Composta está ubicado en Xonacatlán. Los residuos de CDMX y Toluca se hacen composta aquí!!
+          Con el Proyecto Xona, vamos a trabajar de la mano de ellos para generar desarrollo comunitario en esta zona!
+          Generar empleos, educación, comida orgánica, zonas de recreación.
+
+        </div>
 			</div>
 		</div>
 	</div>
