--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -43,7 +43,7 @@
     </div>
 
     <div class="mt-8">
-      <%= button_to "Subscribe", subscription_bookings_path(subscription.id), method: :post, class:"bg-gray-400 hover:bg-gray-500 px-3 py-2 rounded-lg w-full text-white" %>
+      <%= button_to "Subscribe", "subscription_bookings_path(subscription.id)", method: :patch, class:"bg-gray-400 hover:bg-gray-500 px-3 py-2 rounded-lg w-full text-white" %>
     </div>
    </div>
 
