Fix user avatar attachment

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,8 @@
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
                 <%#<%= avatar_for(@user) %>
-                <% if current_user.photo.attached? %>
-                  <%= cl_image_tag current_user.photo.key, class: "rounded-circle", width: "150px" %>
-                <% else %>
-                  <%= cl_image_tag("https://res.cloudinary.com/dqfnzfthu/image/upload/v1661456814/default%20avatar.png", class: "rounded-circle", width: "150px")%>
-                <% end %>
+                <%= cl_image_tag current_user.photo.key, class: "rounded-circle" %>
+
                 <div class="mt-3">
                   <p>Add profile photo</p>
                     <%# <form action="/action_page.php">
