more changes to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
           <ol> 7. Generamos composta</ol>
         </div>
         <div>
-          <a class="btn btn-outline-success" href="#" role="button">Inscripcion</a>
+          <a class="btn btn-success btn-home-success" href="" role="button">Inscripcion</a>
         </div>
 			</div>
 		</div>
