finished the home page...i think

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -163,7 +163,10 @@ body {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-
 .btn-home-success{
   margin-top: 2%;
+}
+
+.btn-home-success2{
+  margin-bottom: 5%;
 }
