--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,6 +74,9 @@
           <ol> 4. Nos llevamos las heces a un terreno para hacer composta</ol>
           <ol> 5. La composta obtenida sera utilizada en espacios recreativos</ol>
         </div>
+        <div>
+          <a class="btn btn-success btn-home-success2" href="" role="button">Inscripcion</a>
+        </div>
 			</div>
 		</div>
 	</div>
