links in home and fix subs cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
           <ol> 7. Generamos composta</ol>
         </div>
         <div>
-          <a class="btn btn-success btn-home-success" href="" role="button">Inscripcion</a>
+          <%= link_to "Subscriptions", subscriptions_path, class:"btn btn-success btn-home-success2" %>
         </div>
 			</div>
 		</div>
@@ -75,7 +75,7 @@
           <ol> 5. La composta obtenida sera utilizada en espacios recreativos</ol>
         </div>
         <div>
-          <a class="btn btn-success btn-home-success2" href="" role="button">Inscripcion</a>
+          <%= link_to "Subscriptions", subscriptions_path, class:"btn btn-success btn-home-success2" %>
         </div>
 			</div>
 		</div>
