--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,71 +1,30 @@
-<div id="bg-primary2">
-  <div class="container">
-    <div class="main-body">
-          <div class="row gutters-sm">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex flex-column align-items-center text-center">
-                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                    <div class="mt-3">
-                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                      <p class="text-secondary mb-1"> Email <%= @user.email %></p>
-                       <p class="text-muted font-size-sm">Phone Number <%= @user.phone %></p>
-                      <p class="text-muted font-size-sm">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
-                      <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
-                      <%# <button class="btn btn-primary">Follow</button>
-                      <button class="btn btn-outline-primary">Message</button> %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Full Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Email</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                       <%= @user.email %>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Address</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                       <%= @user.address %>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row my-6">
-                    <div class="col-sm-12">
-                      <% if @user.subscription %>
-                        <%= link_to "Pick up my composta", user_booking_path(@user.id), data: {"turbo-method": :post, subscription_id: @user.subscription.id}, class:"btn btn-info" %>
-                      <% else %>
-                        <%= link_to "Subscriptions", subscriptions_path,  class:"btn btn-info" %>
-                      <% end %>
-                    </div>
-                  </div>
+<section class="vh-100" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-md-9 col-lg-7 col-xl-5">
+        <div class="card" style="border-radius: 15px; background-color: #93e2bb;">
+          <div class="card-body p-4 text-black">
 
+            <div class="d-flex align-items-center mb-4">
+              <div class="flex-shrink-0">
+                <%= cl_image_tag current_user.photo.key, class:"rounded-circle", width:"150px" %>
+              </div>
+              <div class="flex-grow-1 ms-3">
+                <div>
+                  <%= link_to "Edit", edit_user_registration_path, class:"btn btn-info" %>
                 </div>
               </div>
             </div>
+            <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
+             <p class="text-secondary mb-1"> Email <%= @user.email %></p>
+             <p class="text-muted font-size-sm">Phone Number <%= @user.phone %></p>
+             <p class="text-muted font-size-sm">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
+            <hr>
+            <button type="button" class="btn btn-success btn-rounded btn-block btn-lg">
+            <i class="far fa-clock me-2"></i>Book now</button>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
