more changes to homepage

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" id="navbar">
   <div class="container-fluid">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://res.cloudinary.com/dqfnzfthu/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1661442778/HC_logo_yra5fa.png" %>
+      <%= image_tag "https://res.cloudinary.com/dqfnzfthu/image/upload/b_rgb:f3e5cb,c_thumb,g_face,w_200/v1661531497/kisspng-composting-toilet-zero-waste-desecho-orgnico-sustainable-agriculture-5b0d20611fe2a0.0674517815275869131306_ckr3lh.png", id:"navbar-logo" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
