--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,13 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+#navbar-logo{
+  width: 30%;
+  height: 30%;
+}
+
+.nav-item {
+  font-size: 15px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
+}
