--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,14 @@
 <div id="bg-primary">
   <div class="container" class="text-center">
-    <div class="container-fluid no-padding" id="logo">
-      <div class="row d-flex justify-content-center mb-5">
-        <div class="col-md-12">
-          <img src="https://res.cloudinary.com/dqfnzfthu/image/upload/v1661442535/Screen_Shot_2022-08-25_at_10.35.06_lg7w6r.png" alt="homepage" class="img-responsive" />
-        </div>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+      <div class="container">
+        <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+        <p>Change your life and learn to code at one of our campuses around the world.</p>
+       <a class="btn btn-flat" href="#">Apply now</a>
       </div>
     </div>
+</div>
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -54,7 +56,7 @@
           <ol> 7. Generamos composta</ol>
         </div>
         <div>
-          <%= link_to "Subscriptions", subscriptions_path, class:"btn btn-success btn-home-success2" %>
+          <a class="btn btn-success btn-home-success" href="" role="button">Inscripcion</a>
         </div>
 			</div>
 		</div>
@@ -75,7 +77,7 @@
           <ol> 5. La composta obtenida sera utilizada en espacios recreativos</ol>
         </div>
         <div>
-          <%= link_to "Subscriptions", subscriptions_path, class:"btn btn-success btn-home-success2" %>
+          <a class="btn btn-success btn-home-success2" href="" role="button">Inscripcion</a>
         </div>
 			</div>
 		</div>
