--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,8 @@
 
 
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Dashbord", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Bookigns", bookings_path, class: "dropdown-item" %>
+              <%= link_to "Dashboard", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
