--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
                   <div class="row my-6">
                     <div class="col-sm-12">
                       <% if @user.subscription %>
-                        <%= link_to "Pick up my composta", user_booking_path(@user.id), data: {"turbo-method": :post, subscription_id: @user.subscription.id}, class:"btn btn-info" %>
+                        <%= link_to "Pick up my composta", user_bookings_path(@user.id), data: {"turbo-method": :post, subscription_id: @user.subscription.id}, class:"btn btn-info" %>
                       <% else %>
                         <%= link_to "Subscriptions", subscriptions_path,  class:"btn btn-info" %>
                       <% end %>
