--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,8 +20,11 @@
              <p class="text-muted font-size-sm">Phone Number <%= @user.phone %></p>
              <p class="text-muted font-size-sm">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
             <hr>
-            <button type="button" class="btn btn-success btn-rounded btn-block btn-lg">
-            <i class="far fa-clock me-2"></i>Book now</button>
+            <% if @user.subscription %>
+                 <%= link_to "Pick up my composta", user_booking_path(@user.id), data: {"turbo-method": :post, subscription_id: @user.subscription.id}, class:"btn btn-info" %>
+                <% else %>
+                 <%= link_to "Subscriptions", subscriptions_path,  class:"btn btn-info" %>
+             <% end %>
           </div>
         </div>
       </div>
