--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
-  background-size: cover;
-  background-position: center;
+  background-size: cover !important;
+  background-position: center !important;
   padding: 150px 0;
 }
 
