--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="text-center">
     <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
       <div>
-        <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+        <h1>Hagamos Composta <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
         <p>Change your life and learn to code at one of our campuses around the world.</p>
        <a class="btn btn-flat" href="#">Apply now</a>
       </div>
