--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 
 
 #bg-primary{
-  background-color: #427849
+  background-color: #F3E5CB;
 }
 
 #logo{
@@ -30,5 +30,5 @@
 }
 
 #bg-primary2{
-  background-color: #427849
+  background-color: #F3E5CB;
 }
