--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #B1D3A1;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -18,5 +18,10 @@
 
 .nav-item {
   font-size: 15px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+#greennav{
+  background-color: #B1D3A1;
 }
