--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   background-size: cover !important;
   background-position: center !important;
   padding: 150px 0;
+  margin-bottom: 5%;
 }
 
 .banner h1 {
@@ -10,6 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .banner p {
