--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" id="navbar">
-  <div class="container-fluid">
+  <div class="container-fluid" id="greennav">
     <%= link_to "#", class: "navbar-brand" do %>
       <%= image_tag "https://res.cloudinary.com/dqfnzfthu/image/upload/b_rgb:f3e5cb,c_thumb,g_face,w_200/v1661531497/kisspng-composting-toilet-zero-waste-desecho-orgnico-sustainable-agriculture-5b0d20611fe2a0.0674517815275869131306_ckr3lh.png", id:"navbar-logo" %>
     <% end %>
