--- a/app/assets/stylesheets/components/_bookings_dashboard.scss
+++ b/app/assets/stylesheets/components/_bookings_dashboard.scss
@@ -115,7 +115,7 @@ body{margin-top:20px;}
     left: 0;
     bottom: 0;
     content: "";
-    background: #4125dd;
+    background: #427849;
     width: 0;
     height: 2px;
     -webkit-transition: all 0.4s;
@@ -123,7 +123,7 @@ body{margin-top:20px;}
     transition: all 0.4s;
 }
 .event-schedule-area-two ul.custom-tab li a.active {
-    color: #4125dd;
+    color: #427849;
 }
 
 .event-schedule-area-two .primary-btn {
@@ -136,7 +136,7 @@ body{margin-top:20px;}
     margin-bottom: 0;
 }
 .event-schedule-area-two .tab-content .table thead {
-    background-color: #007bff;
+    background-color: #427849;
     color: #fff;
     font-size: 20px;
 }
@@ -160,7 +160,7 @@ body{margin-top:20px;}
     text-align: center;
 }
 .event-schedule-area-two .tab-content .table tbody tr th .event-date span {
-    font-size: 50px;
+    font-size: 25px;
     line-height: 50px;
     font-weight: normal;
 }
