--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -10,9 +10,6 @@
       $<%= subscription.price %>
     </p>
 
-    <p class="mt-4 font-medium text-gray-700">
-      Up to 5 listing monthly
-    </p>
 
     <div class="mt-8">
       <ul class="grid grid-cols-1 gap-4">
@@ -21,7 +18,7 @@
             <path d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM371.8 211.8l-128 128C238.3 345.3 231.2 348 224 348s-14.34-2.719-19.81-8.188l-64-64c-10.91-10.94-10.91-28.69 0-39.63c10.94-10.94 28.69-10.94 39.63 0L224 280.4l108.2-108.2c10.94-10.94 28.69-10.94 39.63 0C382.7 183.1 382.7 200.9 371.8 211.8z"></path>
           </svg>
 
-          20 days only
+          pick up $70
         </li>
 
         <li class="inline-flex items-center text-gray-600">
@@ -29,7 +26,7 @@
             <path d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM371.8 211.8l-128 128C238.3 345.3 231.2 348 224 348s-14.34-2.719-19.81-8.188l-64-64c-10.91-10.94-10.91-28.69 0-39.63c10.94-10.94 28.69-10.94 39.63 0L224 280.4l108.2-108.2c10.94-10.94 28.69-10.94 39.63 0C382.7 183.1 382.7 200.9 371.8 211.8z"></path>
           </svg>
 
-          Weekly email newsletter
+          one big bucket and one little bucket
         </li>
 
         <li class="inline-flex items-center text-gray-600">
@@ -37,18 +34,16 @@
             <path d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM371.8 211.8l-128 128C238.3 345.3 231.2 348 224 348s-14.34-2.719-19.81-8.188l-64-64c-10.91-10.94-10.91-28.69 0-39.63c10.94-10.94 28.69-10.94 39.63 0L224 280.4l108.2-108.2c10.94-10.94 28.69-10.94 39.63 0C382.7 183.1 382.7 200.9 371.8 211.8z"></path>
           </svg>
 
-          Quota renewed monthly
+          get your own compost
         </li>
       </ul>
     </div>
 
     <div class="mt-8">
       <% if current_user.subscription && current_user.subscription == subscription %>
-        <p class="mt-4 font-bold text-gray-700">
-          You own a subscription
-        </p>
+        <button type="button" class="bg-gray-500 px-3 py-2 rounded-lg w-full text-white" disabled>You own this subscription</button>
       <% else %>
-      <%= button_to "Subscribe", add_user_subscription_path(subscription.id), method: :patch, class:"bg-gray-400 hover:bg-gray-500 px-3 py-2 rounded-lg w-full text-white" %>
+        <%= button_to "Subscribe", add_user_subscription_path(subscription.id), method: :patch, class:"bg-gray-400 hover:bg-gray-500 px-3 py-2 rounded-lg w-full text-white" %>
       <% end %>
     </div>
    </div>
