some correction on navbar and subs

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -36,7 +36,7 @@
                                           <td>
                                               <div class="event-img">
                                                   <%# <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" /> %>
-                                                  <%= cl_image_tag current_user.photo.key, class:"rounded-circle", width:"150px" %>
+                                                  <%= cl_image_tag booking.user.photo.key, class:"rounded-circle", width:"150px" %>
                                               </div>
                                           </td>
                                           <td>
