--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,15 +8,15 @@
             <div class="card-body p-4 text-black">
               <div class="d-flex justify-content-center align-items-center mb-4">
                 <div>
-                  <%= cl_image_tag current_user.photo.key, class:"rounded-circle", width:"125px" %>
+                  <%= cl_image_tag current_user.photo.key, class:"rounded-circle", width:"125px", height: "150px" %>
                 </div>
 
               </div>
               <div class= "d-flex-column text-center justify-content-center align-items-center mb-4 t">
-                <h4><%= @user.first_name %> <%= @user.last_name %> </h4>
-                <p class="text-secondary mb-1"> Email <%= @user.email %></p>
-                <p class="text-muted font-size-sm">Phone Number <%= @user.phone %></p>
-                <p class="text-muted font-size-sm">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
+                <h1 class="header-name pt-3"><%= @user.first_name %> <%= @user.last_name %> </h1>
+                <p class="text-secondary pt-3"> Email <%= @user.email %></p>
+                <p class="text-muted font-size-sm pt-3">Phone Number <%= @user.phone %></p>
+                <p class="text-muted font-size-sm pt-3">Address <%= @user.street %> <%= @user.city %> <%= @user.state %> <%= @user.zip_code %></p>
               </div>
               <hr>
               <div class="d-flex justify-content-center mt-4">
